--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,5 @@
 # 07 - Using SQLAlchemy Database
 instance/
 
-# 09 - Blueprints
-# 10 - Handling multiple Python files
+# 09 - Blueprints and Handling multiple Python files
 __pycache__/
